# margo

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  YOL_HARITASI.md  clippy.toml  deny.toml  flake.nix  index.html  install.sh  justfile  margo.desktop  mkdocs.yml  requirements.txt  road_map.md  road_map_mshell.md  rust-toolchain.toml
margo/: Cargo.toml  README.md
margo-config/: Cargo.toml
margo-config/benches/: parse.rs
margo-config/examples/: check_config.rs
margo-config/src/: diagnostics.rs  lib.rs  parser.rs  types.rs  validator.rs
margo-config/tests/: proptest_parser.rs
margo-ipc/: Cargo.toml
margo-ipc/src/: actions.rs  lib.rs  migrate.rs  types.rs
margo-layout/: Cargo.toml  README.md
margo-layout/examples/: layout_dock.conf
margo-layout/src/: apply.rs  capture.rs  main.rs  parser.rs  presets.rs  preview.rs
margo-layouts/: Cargo.toml
margo-layouts/benches/: arrange.rs
margo-layouts/src/: algorithms.rs  lib.rs
margo-layouts/tests/: layouts.rs  proptest_arrange.proptest-regressions  proptest_arrange.rs
margo-logging/: Cargo.toml
margo-logging/src/: lib.rs
margo-portal/: Cargo.toml  README.md
margo-portal/src/: global_shortcuts.rs  main.rs  mutter.rs  picker.rs  screencast.rs  screenshot.rs
margo-shell/: Cargo.toml  mshell.example.toml
margo-shell/i18n/en-US/: margo-shell.ftl
margo-shell/i18n/tr-TR/: margo-shell.ftl
margo-shell/src/: app.rs  config.rs  i18n.rs  ipc.rs  main.rs  outputs.rs  theme.rs
margo-shell/src/components/: icons.rs  menu.rs  module_group.rs
margo-shell/src/lockscreen/: mod.rs  pam.rs
margo-shell/src/modules/: dns.rs  mod.rs  network_speed.rs  notifications.rs  podman.rs  power.rs  system_info.rs  tempo.rs  ufw.rs  window_title.rs  workspaces.rs
margo-shell/src/services/: idle_inhibitor.rs
margo-shell/src/wallpaper/: mod.rs  state.rs
margo/assets/: default-binds.conf  default-config.conf
margo/src/: a11y.rs  border.rs  config.example.conf  cursor.rs  frame_clock.rs  global_shortcuts.rs  input_handler.rs  libinput_config.rs  main.rs  plugin.rs  screenshot.rs  screenshot_region.rs  screenshot_region_ui.rs  scripting.rs  session.rs  spatial_overview.rs  state.rs  wallpaper.rs
margo/src/animation/: mod.rs  spring.rs
margo/src/backend/: udev.rs  winit.rs
margo/src/dbus/: cast_ids.rs  gnome_shell_introspect.rs  gnome_shell_screenshot.rs  ipc_output.rs  mod.rs  mutter_display_config.rs  mutter_screen_cast.rs  mutter_service_channel.rs
margo/src/dispatch/: mod.rs  sendkey.rs
margo/src/input/: grabs.rs  mod.rs
margo/src/ipc/: mod.rs  protocol.rs  server.rs  topics.rs  watch.rs
margo/src/layout/: algorithms.rs  mod.rs  snapshot_tests.rs
margo/src/protocols/: color_management.rs  color_representation.rs  dwl_ipc.rs  ext_workspace.rs  foreign_toplevel.rs  gamma_control.rs  generated.rs  layer_shell.rs  mod.rs  output_management.rs  output_power.rs  screencopy.rs  virtual_pointer.rs  wlr_foreign_toplevel.rs
margo/src/render/: blur.rs  clipped_surface.rs  config_error_overlay.rs  group_tabs.rs  hdr_metadata.rs  icc_lut.rs  linear_composite.rs  mod.rs  namespaced.rs  open_close.rs  resize_render.rs  rounded_border.rs  rounded_solid.rs  shadow.rs  text.rs  window_capture.rs
margo/src/screencasting/: mod.rs  pw_utils.rs  render_helpers.rs
margo/src/state/: animation_tick.rs  arrange.rs  data.rs  debug_dump.rs  dispatch.rs  dpms.rs  focus_methods.rs  focus_target.rs  frame_clock_sched.rs  (+12 more)
mcal/: Cargo.toml
mcal/src/: account.rs  agenda.rs  config.rs  credentials.rs  error.rs  ics.rs  lib.rs  main.rs  model.rs  oauth.rs  recur.rs  secret.rs
mdots/: Cargo.toml
mdots/src/: defaults.rs  dotfiles.rs  main.rs  process.rs  progress.rs  secrets.rs  service_profile.rs  services.rs  theming.rs  ui.rs
mgreet/: Cargo.toml  build.rs
mgreet/src/: auth.rs  avatar.rs  background.rs  battery.rs  cache.rs  handoff.rs  idle.rs  keyboard.rs  main.rs  power.rs  sessions.rs  style.rs  style.scss  ui.rs
mgreet/tests/: avatar_size.rs  css_parses.rs
midle/: Cargo.toml
midle/src/: actions.rs  config.rs  daemon.rs  dbus_inhibit.rs  inhibitors.rs  ipc.rs  main.rs  state.rs
mkeys/: Cargo.toml  README.md
mkeys/src/: cli.rs  config.rs  ipc.rs  main.rs
mlock/: Cargo.toml  README.md
mlock/src/: auth.rs  background.rs  battery.rs  config.rs  icons.rs  main.rs  power.rs  render.rs  seat.rs  sidecar.rs  state.rs  surface.rs  wallpaper.rs
mlogind/: Cargo.toml  README.md
mlogind-proto/: Cargo.toml
mlogind-proto/src/: lib.rs  transport.rs
mlogind/extra/: 60-mlogind-greeter.rules  config.toml  mlogind-autologin.pam  mlogind-greeter.pam  mlogind.pam  mlogind.service  mlogind.sysusers  variables.toml
mlogind/src/: chvt.rs  cli.rs  config.rs  console_palette.rs  daemon.rs  info_caching.rs  main.rs  theme_sync.rs  vt_blank.rs  vt_guard.rs
mpicker/: Cargo.toml  README.md
mpicker/src/: main.rs
mplay/: Cargo.toml  build.rs
mplay/src/: cli.rs  control.rs  geometry.rs  main.rs  margo.rs  mpv_ipc.rs  ytdl.rs  ytdl_shim.rs
mplugin-sdk/: Cargo.toml
mplugin-sdk/src/: lib.rs
mplugin-sdk/wit/: world.wit
mpower/: Cargo.toml  README.md  mpower.service
mpower/src/: config.rs  cpu.rs  lib.rs  main.rs  policy.rs  ppd.rs  syspower.rs
mscreenshot/: Cargo.toml  README.md
mscreenshot/src/: main.rs
mshell/: .gitignore  Cargo.toml  README.md
mshell-crates/mshell-ai/: Cargo.toml
mshell/assets/: font_README.md  mshell_custom_icon_project.gs2  style.css
mshell/src/: app.rs  bar.rs  config.rs  i18n.rs  main.rs  matugen.rs  outputs.rs  restart.rs  state.rs  theme.rs
mshellctl/: Cargo.toml  README.md
mshellctl/src/: app.rs  bus.rs  lib.rs  main.rs
mshellshare/: Cargo.toml  README.md
mshellshare/src/: bus.rs  main.rs
mvisual/: Cargo.toml  README.md
mvisual/src/: main.rs
mvpn/: Cargo.toml  README.md
mvpn/src/: main.rs
mwizard/: Cargo.toml  README.md
mwizard/src/: main.rs
start-margo/: Cargo.toml  README.md
start-margo/assets/: default-binds.conf  default-config.conf
start-margo/src/: main.rs
start-margo/tests/: integration.rs
(+1320 files in other folders)
