[workspace]
members = [
    "margo",
    "margo-config",
    "margo-layouts",
    "margo-logging",
    "margo-portal",
    "mctl",
    "mkeys",
    "mlayout",
    "mlock",
    "mlogind",
    "mpicker",
    "mplay",
    "mpower",
    "mscreenshot",
    "mvpn",
    "mvisual",
    "mwizard",
    "start-margo",
    # Shell — port of OkShell. 3 binaries (mshell, mshellctl,
    # mshellshare) + 26 helper crates under mshell-crates/.
    "mshell",
    "mshellctl",
    "mshellshare",
    "mshell-crates/mshell-ai",
    "mshell-crates/mshell-auth",
    "mshell-crates/mshell-cache",
    "mshell-crates/mshell-clipboard",
    "mshell-crates/mshell-cli-style",
    "mshell-crates/mshell-clut-gen",
    "mshell-crates/mshell-common",
    "mshell-crates/mshell-config",
    "mshell-crates/mshell-core",
    "mshell-crates/mshell-frame",
    "mshell-crates/mshell-gamma",
    "mshell-crates/mshell-idle",
    "mshell-crates/mshell-launcher",
    "mshell-crates/mshell-image",
    "mshell-crates/mshell-lockscreen",
    "mshell-crates/mshell-logging",
    "mshell-crates/mshell-margo-client",
    "mshell-crates/mshell-matugen",
    "mshell-crates/mshell-notification-popups",
    "mshell-crates/mshell-osd",
    "mshell-crates/mshell-plugin-host",
    "mshell-crates/mshell-plugin-ui",
    "mshell-crates/mshell-plugins",
    "mshell-crates/mshell-polkit",
    "mshell-crates/mshell-screenshot",
    "mshell-crates/mshell-services",
    "mshell-crates/mshell-session",
    "mshell-crates/mshell-settings",
    "mshell-crates/mshell-sounds",
    "mshell-crates/mshell-style",
    "mshell-crates/mshell-utils",
    "mshell-crates/mshell-wallpaper",
]
# WASM plugin authoring SDK + test fixtures — built standalone for
# wasm32-wasip2, not part of the host workspace build.
exclude = [
    "mplugin-sdk",
    "mshell-crates/mshell-plugin-host/tests/fixtures/hello-guest",
    "mshell-crates/mshell-plugin-host/tests/fixtures/sdk-guest",
    "mshell-crates/mshell-plugin-host/tests/fixtures/assistant-guest",
]
resolver = "2"

[workspace.package]
version = "1.0.10"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/kenanpelit/margo"
rust-version = "1.93"

# Clippy lints we accept project-wide (advisory in CI). Allowed
# deliberately rather than churning intentional code:
#  - too_many_arguments / type_complexity: relm4 + reactive_stores
#    signatures and builder fns are intentionally wide / richly typed.
#  - enum_variant_names: Settings input enums use a uniform `Set*` /
#    `*Changed` naming on purpose so the message surface reads consistently.
#  - module_inception: `mod foo` inside `foo.rs` is the house file layout.
#  - result_large_err / large_enum_variant: the large payloads are config
#    / theme values on cold paths (load, theme switch) — boxing them buys
#    nothing measurable and only adds indirection.
#  - doc_*: the aligned doc-comment list style is intentional.
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
enum_variant_names = "allow"
module_inception = "allow"
result_large_err = "allow"
large_enum_variant = "allow"
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
# An explicit `if divisor == 0 { fallback } else { n / divisor }` reads
# clearer at the use sites (pct math) than `n.checked_div(d)`.
manual_checked_ops = "allow"

[workspace.dependencies]
# Core (shared by every crate)
anyhow = "1.0"
bitflags = "2.0"
clap = { version = "4.0", features = ["derive"] }
# Global allocator for the long-lived mshell binary (Rust-side allocations).
# mimalloc fragments far less than glibc malloc across mshell's many threads
# and returns freed memory to the OS, so the shell's RSS doesn't ratchet up
# over a session. Complements `MALLOC_ARENA_MAX=2` in mshell.service, which
# bounds the glibc arenas that GTK's C-side allocations still use.
mimalloc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
# WASM plugin host (mplugins WASM tier). Heavy — only pulled when the
# `mshell-plugin-host` crate's `wasm` feature is enabled.
wasmtime = "27"
wasmtime-wasi = "27"
# Blocking HTTP for the plugin host's `http` capability (W3). Pure-Rust + rustls.
ureq = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# Compositor + protocol stack (margo, mlock, …)
calloop = { version = "0.14", features = ["executor", "futures-io", "signals"] }
wayland-server = "0.31"
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-scanner = "0.31"
wayland-protocols = { version = "0.32", features = ["staging", "client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
xkbcommon = { version = "0.8", features = ["wayland"] }
xcursor = "0.3"

# mshell GUI stack (gtk4 + relm4 + layer-shell + session-lock)
gtk4 = { version = "0.10", features = ["v4_20"] }
gtk4-layer-shell = "0.7"
gtk4-session-lock = { version = "0.3", features = ["v1_2"] }
relm4 = "0.10"
# Match gtk4 0.10's gtk-rs generation (cairo/pango 0.21). Declaring 0.22
# here pulled a SECOND full gtk-rs stack (glib/gio/cairo/pango/pangocairo
# + their proc-macros, all at 0.22) alongside gtk4's 0.21 — pure build-time
# bloat, and a latent cairo-version mismatch across the gtk4 boundary.
cairo-rs = "0.21"
any_spawner = { version = "0.3", features = ["glib", "async-executor"] }
reactive_graph = { version = "0.2", features = ["effects"] }
reactive_stores = "0.4"

# Image / theming
image = { version = "0.25", features = ["png", "jpeg", "bmp"] }
grass = "0.13"
lutgen = { version = "0.14", default-features = false, features = ["rayon"] }
rayon = "1"

# Filesystem / config / IPC plumbing
dirs = "6"
# Cross-platform keyring — Linux backend is the Secret Service (gnome-keyring
# / kde-wallet). Used by mshell-plugins to store `type = "secret"` settings
# (API keys, tokens) outside plugins.toml.
keyring = "3"
figment = { version = "0.10", features = ["yaml"] }
fontconfig = "0.10"
futures = "0.3"
libc = "0.2"
memmap2 = "0.9"
nix = { version = "0.31", features = ["signal", "user"] }
notify = "9.0.0-rc.1"
notify-rust = "4"
pam = "0.8"
regex = "1"
rodio = { version = "0.22", default-features = false, features = ["vorbis", "playback"] }
rustix = { version = "1", features = ["shm", "fs"] }
schemars = "1"
serde_yaml = "0.9"
time = { version = "0.3", features = ["local-offset", "formatting"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing-appender = "0.2"
zbus = "5"

# Wayle service crates (audio / battery / bt / brightness / media /
# network / sysinfo / systray / weather …). `wayle-hyprland` is
# intentionally excluded — replaced by the in-tree
# `mshell-margo-client` crate that talks margo's Unix IPC socket
# (`watch state`) + foreign-toplevel-list instead of Hyprland's socket.
wayle-audio = "0.1"
wayle-battery = "0.1"
wayle-bluetooth = "0.1"
wayle-brightness = "0.1"
wayle-media = "0.1"
wayle-network = "0.1"
wayle-notification = "0.1"
wayle-power-profiles = "0.1"
wayle-sysinfo = "0.1"
wayle-systray = { version = "0.1", features = ["adapter-gtk"] }
wayle-weather = "0.1"

# Internal mshell crates — paths relative to workspace root.
mshell-auth = { path = "mshell-crates/mshell-auth" }
mshell-cache = { path = "mshell-crates/mshell-cache" }
mshell-cli-style = { path = "mshell-crates/mshell-cli-style" }
mshell-clipboard = { path = "mshell-crates/mshell-clipboard" }
mshell-ai = { path = "mshell-crates/mshell-ai" }
mshell-clut-gen = { path = "mshell-crates/mshell-clut-gen" }
mshell-common = { path = "mshell-crates/mshell-common" }
mshell-config = { path = "mshell-crates/mshell-config" }
mshell-core = { path = "mshell-crates/mshell-core" }
mshell-frame = { path = "mshell-crates/mshell-frame" }
mshell-gamma = { path = "mshell-crates/mshell-gamma" }
mshell-idle = { path = "mshell-crates/mshell-idle" }
mshell-launcher = { path = "mshell-crates/mshell-launcher" }
mshell-image = { path = "mshell-crates/mshell-image" }
mshell-lockscreen = { path = "mshell-crates/mshell-lockscreen" }
mshell-logging = { path = "mshell-crates/mshell-logging" }
mshell-margo-client = { path = "mshell-crates/mshell-margo-client" }
mshell-matugen = { path = "mshell-crates/mshell-matugen" }
mshell-notification-popups = { path = "mshell-crates/mshell-notification-popups" }
mshell-osd = { path = "mshell-crates/mshell-osd" }
mshell-plugin-host = { path = "mshell-crates/mshell-plugin-host" }
mshell-plugin-ui = { path = "mshell-crates/mshell-plugin-ui" }
mshell-plugins = { path = "mshell-crates/mshell-plugins" }
mshell-polkit = { path = "mshell-crates/mshell-polkit" }
mshell-screenshot = { path = "mshell-crates/mshell-screenshot" }
mshell-services = { path = "mshell-crates/mshell-services" }
mshell-session = { path = "mshell-crates/mshell-session" }
mshell-settings = { path = "mshell-crates/mshell-settings" }
mshell-sounds = { path = "mshell-crates/mshell-sounds" }
mshell-style = { path = "mshell-crates/mshell-style" }
mshell-utils = { path = "mshell-crates/mshell-utils" }
mshell-wallpaper = { path = "mshell-crates/mshell-wallpaper" }

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
rev = "e1fb2496c9d7ec4d994cc50fe61b7439686ba8b9"
default-features = false

[profile.release]
debug = "line-tables-only"
overflow-checks = true
lto = "thin"
# Keep symbols in the installed binary so coredumps from crashes
# (looking at you, mesa abort inside the render path on overview
# trigger) can be symbolized via `addr2line -e /usr/bin/margo …`.
# Default `cargo install` strips; this prevents that.
strip = "none"

# Release-grade distribution build. Inherits `release` but trades a longer
# compile for a faster, smaller shipped binary: a single codegen unit (no
# cross-unit inlining barriers) + fat LTO. Opt-in so the dev inner loop keeps
# `release`'s thin-LTO / parallel-codegen speed. Build the installed binaries
# with `cargo build --profile dist -p margo` (etc.); CI / `just` keep using
# `release`.
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

# ── Vendored patches ─────────────────────────────────────────────────
# wayle-notification is vendored (verbatim copy of 0.1.3 + a contained
# margo extension): KDE-style inline reply — the `inline-reply`
# capability, `Notification::reply(text)` and the
# `NotificationReplied(id, text)` signal — plus advertising `sound`
# (the shell plays notification sounds + honours sound hints). Upstream
# PR-able; drop the patch when wayle grows the capability natively.
[patch.crates-io]
wayle-notification = { path = "vendor/wayle-notification" }
