[package]
name = "margo-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
xkbcommon = { version = "0.8" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
