[package]
name = "margo-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mctl"
path = "src/bin/mctl.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wayland-client.workspace = true
wayland-backend.workspace = true
wayland-scanner.workspace = true
clap.workspace = true
clap_complete = "4"
# Pulled in for `mctl rules` — config-only introspection, no Wayland.
margo-config = { path = "../margo-config" }
regex = "1"
# `mctl clients`/`outputs` use libc::getuid for the
# /run/user/$UID fallback when XDG_RUNTIME_DIR isn't set.
libc = "0.2"
