[package]
name = "margo-layouts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure layout-arithmetic crate for margo's 14 tiling algorithms — usable by both the compositor binary and downstream tools (mvisual)."
repository.workspace = true

[dependencies]
# Bench-only. Optional + gated behind the `bench` feature (with
# `required-features` on the bench target) so a plain `cargo test` / `cargo
# check` cold build doesn't drag in the criterion/plotters chain. Run benches
# with `cargo bench -p margo-layouts --features bench`.
criterion = { version = "0.5", optional = true }

[features]
bench = ["dep:criterion"]

[[bench]]
name = "arrange"
harness = false
required-features = ["bench"]

[lints]
workspace = true
