[package]
name = "margo-portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Native xdg-desktop-portal backend for margo (ScreenCast: window + monitor share)."
repository.workspace = true
license.workspace = true

[[bin]]
name = "margo-portal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true

[lints]
workspace = true
